--- a/ckanext/tess/public/workflow_modal.html
+++ b/ckanext/tess/public/workflow_modal.html
@@ -11,7 +11,7 @@
     });
 </script>
 
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="zindex:10">
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="zindex:10; width:80%; margin:auto;  left:inherit; ">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
     <h3 id="myModalLabel">Training materials for <em class="modal-workflow-title">...</em></h3>
@@ -21,6 +21,5 @@
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary" data-dismiss="modal" id="save-material" class="hidden">Save</button>
   </div>
 </div>
