--- a/ckanext/tess/public/workflow_modal.html
+++ b/ckanext/tess/public/workflow_modal.html
@@ -19,7 +19,8 @@
   <div class="modal-body">
       <div style="width:50px; margin: 0 auto;"><img src="/images/spiffygif_132x132.gif"/></div>
   </div>
-  <div class="modal-footer">
+  <div class="modal-footer" id="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button class="btn btn-primary" data-dismiss="modal" id="save-material" hidden>Save</button>
   </div>
 </div>
