Added navigation at the footer of the modal to help people navigate between tools/materials associations

--- a/ckanext/tess/public/workflow_modal.html
+++ b/ckanext/tess/public/workflow_modal.html
@@ -20,6 +20,14 @@
       <div style="width:50px; margin: 0 auto;"><img src="/images/spiffygif_132x132.gif"/></div>
   </div>
   <div class="modal-footer" id="modal-footer">
+
+      <div id="navigate" class="h4 pull-left">
+    Navigation:
+        </i> <a href="#top">Top</a> -
+        <!--<i class="icon-plus-sign"></i>--> <a href="#training_materials_head">Associate Materials</a> -
+        <!--<i class="icon-plus-sign"></i> --><a href="#tools_head">Associate Tools</a>
+      </div>
+
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
     <button class="btn btn-primary" data-dismiss="modal" id="save-material" hidden>Save</button>
   </div>
